Affiliates DataTable implementation

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -70,7 +70,7 @@ body {
   margin: 0;
   font-family: var(--general-font) !important;
   font-size: var(--normal-font-size) !important;
-  background-color: var(--color-white) !important;
+  background-color: var(--color-background) !important;
   color: var(--color-text) !important;
   text-rendering: optimizeLegibility;
   transition: var(--transition-rapida);
