Add white views for all modules

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -160,6 +160,7 @@ input {
 .bg-white-1 { background-color: var(--color-white); }
 .bg-checker { background-color: var(--color-checker); } 
 .bg-background { background-color: var(--color-background); }
+.bg-transparent { background-color: transparent !important; }
 
 // BOX SHADOW
 .shadow-normal { box-shadow: var(--bs-normal); }
