--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -237,6 +237,14 @@ input {
 .ar-1-2 { aspect-ratio: 0.5; }
 .ar-2-1 { aspect-ratio: 2; }
 
+// GAP 
+.gap-1 { gap: 1px; }
+.gap-2 { gap: 2px; }
+.gap-3 { gap: 3px; }
+.gap-4 { gap: 4px; }
+.gap-5 { gap: 5px; }
+.gap-6 { gap: 6px; }
+
 
 // CURSOR
 .cursor-pointer { cursor: pointer; }
